--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
